--- a/index.html
+++ b/index.html
@@ -18,35 +18,10 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <!--1st section-->
     <header>
-      <div class="main-navbar">
-        <ul class="nav-ul">
-          <li class="nav-li">PORTFOLIO</li>
-          <li class="nav-li">BLOG</li>
-          <a class="nav-button" target="_blank" href="youtube.com">DONWLOAD CV</a>
-        </ul>
-      </div>
+      <nav>
+        
+      </nav>
     </header>
-
-    <!--1st section-->
-    <section class="header-section">
-      <div class="header-section-width">
-        <h3>Hi, I am</h3>
-        <h1>MD ASIM ISLAM</h1>
-        <p>
-          Shot what able cold new see hold.Friendly as an betrayed formerly he.
-          Morning because as to society behaved moments.
-        </p>
-        <a class="down-button" target="_blank" href="youtube.com"
-          >DONWLOAD CV</a
-        >
-      </div>
-
-      <div>
-        <img src="images/hardy.png" alt="hardy" />
-      </div>
-    </section>
-    
   </body>
 </html>
