--- a/index.html
+++ b/index.html
@@ -11,17 +11,36 @@
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <header>
       <nav>
-        
+        <h2 class="nav-title">ASI <span class="text-primary">M</span></h2>
+        <ul>
+          <li>Portfolio</li>
+          <li>Blogs</li>
+          <li><button class="btn-primary">Hire</button></li>
+        </ul>
       </nav>
+      <!-- header banner -->
+      <div>
+        <div class="banner">
+          <div>
+            <h3 class="banner-sub-title">Hi, I am</h3>
+            <h1 class="banner-title">MD ASIM ISLAM</h1>
+            <p class="banner-description">
+              Shot what able cold new see hold.Friendly as an betrayed formerly
+              he. Morning because as to society behaved moments.
+            </p>
+            <button class="btn-primary">Download CV</button>
+          </div>
+          <div>
+            <img src="images/hardy.png" alt="" />
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
